fix image position issue on safari

--- a/theme/theme.css
+++ b/theme/theme.css
@@ -48,6 +48,9 @@
 	position:absolute;
 	top: 50%;
 	left: 50%;
+	-moz-transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 	margin: auto;
 }
